[gd_scene load_steps=9 format=3 uid="uid://fj7tlyu7pijf"]

[ext_resource type="Script" uid="uid://2hlg1mvqgy1i" path="res://UI/GameOver/game_over.gd" id="1_5gu8b"]
[ext_resource type="Texture2D" uid="uid://dy31y5vcloy7b" path="res://UI/StartGame/bg.png" id="1_xfwpy"]
[ext_resource type="AudioStream" uid="uid://dl5mcbv8oa4nc" path="res://Sounds/GameOver.wav" id="3_310gj"]

[sub_resource type="FontVariation" id="FontVariation_5gu8b"]

[sub_resource type="LabelSettings" id="LabelSettings_5gu8b"]
font = SubResource("FontVariation_5gu8b")
font_size = 80
font_color = Color(1, 0.655745, 0.293454, 1)
outline_size = 5
outline_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_310gj"]
font_size = 20
font_color = Color(0.956863, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_310gj"]

[sub_resource type="LabelSettings" id="LabelSettings_7k4m6"]
font_size = 20
font_color = Color(0.00319933, 0.118914, 0.0902446, 1)

[node name="Game Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5gu8b")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1158.0
offset_bottom = 652.0
texture = ExtResource("1_xfwpy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 647.0
color = Color(0, 0, 0, 0.733333)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -276.0
offset_right = 217.0
offset_bottom = -166.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_5gu8b")

[node name="Message" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -156.0
offset_top = -456.0
offset_right = 152.0
offset_bottom = -428.0
grow_horizontal = 2
grow_vertical = 0
text = "Your time has run out. The shadows laugh as they take you."
label_settings = SubResource("LabelSettings_310gj")

[node name="Buttons" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -44.0
offset_right = 133.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
layout_mode = 2

[node name="Retry" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
theme_override_fonts/font = SubResource("FontVariation_310gj")
theme_override_font_sizes/font_size = 30
text = "Retry"

[node name="Main Menu" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_310gj")
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[node name="Quit" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Retry")
theme_override_fonts/font = SubResource("FontVariation_310gj")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="CreatedBy" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -89.5
offset_top = -52.0
offset_right = 89.5
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
text = "Designed and developed by Sahbaz"
label_settings = SubResource("LabelSettings_7k4m6")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_310gj")
autoplay = true

[connection signal="pressed" from="Buttons/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
